# SmartForge

./: README.md
back-end/: Cargo.toml  account.json  smartforge.db
back-end/src/: main.rs
back-end/src/authentification/: auth.rs  mod.rs
back-end/src/document/: doc_utils.rs  mod.rs
front-end/: tailwind.config.ts
front-end/public/assets/: brain.webm
front-end/src/app/: layout.tsx  page.tsx
front-end/src/app/authentification/: page.tsx
front-end/src/app/dashboard/: layout.tsx  page.tsx
front-end/src/app/dashboard/Home/: page.tsx
front-end/src/app/dashboard/Import/: page.tsx
front-end/src/app/ui/: dragDataset.tsx  presentation.tsx
front-end/src/app/ui/Forms/: LoginForm.tsx  SignInForm.tsx
front-end/src/app/utils/: documentAPI.ts
front-end/src/app/utils_docs/: GetNameFileAPI.ts  UploadFileAPI.ts
