[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
dotenv = "0.15"  # pour charger les variables d'environnement
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
chrono = "0.4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
rand = "0.8"
hex = "0.4"


[dev-dependencies]
